# capstonenlpencuestas_mine9

./: .coverage  .gitignore  CODEOWNERS  HALLAZGOS_Y_TESTING.md  pyproject.toml
data/utilities/: accents.xlsx  stopwords.xlsx
notebooks/: prueba.ipynb  prueba_limpieza1--v2syns.ipynb  prueba_limpieza1.ipynb  prueba_limpieza2.ipynb
src/: EDA.py  Engineering.py  limpieza.py  settings.py
src/datacleaning/: limpieza.py  synonyms.py
tests/: test_clean_key_column.py  test_clean_text.py  test_integration.py  test_load_data.py  test_save_cleaned_data.py  test_stopwords.py
