[project]
name = "limpieza-encuestas"
version = "0.1.0"
description = "Text cleaning utilities for open-ended survey responses"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]

packages = [
    { include = "limpieza.py", from = "src" },
    { include = "settings.py", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
