[project]
name = "limpieza-encuestas"
version = "0.1.0"
description = "Text cleaning utilities for open-ended survey responses"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "gensim (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]

packages = [
    { include = "limpieza.py", from = "src/datacleaning" },
    { include = "settings.py", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
